@@ -1,4 +1,7 @@
 Version 1.5.10+svn:
+ * Campaign server:
+   * reject add-ons with an empty type
+   * give warning note when the add-on version is invalid
  * Graphics
     * New portrait for the Javelineer.
  * Language and i18n:
